More cleanup after playtesting

--- a/Translation/Clean Intro.txt
+++ b/Translation/Clean Intro.txt
@@ -52,6 +52,7 @@
 夕はその場に立ち尽くして、全く動けずにいるようだった。=Yuu was still standing in the same spot, frozen in place...
 ……そもそも終電もない夜の街で、少女がどこに行けるというのだろう。=...This late at night and no trains were working, where could that girl go.
 不意に、夕がいるはずの場所に荒々しく車が立ち止まる音が聞こえてくる。=Unexpectedly, the sound of a braking car could be heard from the place where Yuu was supposed to be.
+いやな予感がしてあなたは振り返るが、既に彼女の姿はなかった。=You had a bad feeling when you looked back, but she was already gone.
 
 		# Continuation
 どんな事情があるのかはわからないが、どうせくだらない人生だ。=You didn't know what kind of problems she was going through.
