--- a/Translation/Game.txt
+++ b/Translation/Game.txt
@@ -186,7 +186,12 @@ Ehehe...I wonder.良く似合ってる？　そ、そう……嬉しいな。=Eh
 
 // Second Date
 えへへ……じゃ、行こっか。=Ehehe...Well, shall we?
+
 夕が行ってみたいと言うのでラーメン屋で腹ごなしをして、駅前でショッピングを楽しんだ。=Yuu wanted to try eating at the ramen shop. Afterwards, the two of you enjoyed shopping around the station square.
+口コミサイトで人気の店に並んで昼食をとり、近くの遊歩道をのんびり歩いた。=The two of you lined up at a popular restaurant for lunch and walked around the promenade afterwards.
+夕の希望でファーストフード店に行って、大量のポテトをつまみながらパソコン周りの雑談に花を咲かせた。=You went to a fast food restaurant since Yuu wanted to. The two of you leisurely chatted while eating french fries and appreciating the blooming flowers nearby.
+
+
 
 // Hot Springs
 へえ。今度の土曜日、おやすみ取れそうなんだ？=Hey, you're going to get a day off next Saturday, right?
