--- a/Translation/Sex Scene.txt
+++ b/Translation/Sex Scene.txt
@@ -17,6 +17,10 @@
 あぅ……うぅ……今日、お風呂入ってないのにぃ……<color%3D#fca4bc>❤<color%3Dwhite>=Au...Uu...I didn't take a bath yet...<color%3D#fca4bc>❤<color%3Dwhite>
 おじさん……出してないけど、いいの……？=Oji-san...You didn't cum yet, is it fine...?
 え……もう、終わり……？=Eh...We're done already...?
+もういいの……？=Is that enough...?
+……あんまり気持ち良くなかった？　ごめんね……。=...Did it not feel good? Sorry...
+
+ほんとかなぁ……。=Really...
 
 はむ……んちゅ……。=Hamu...Nchuu...
 ちゅっ……れろ……。=Chuu...Rero...
