--- a/Translation/Sex Scene.txt
+++ b/Translation/Sex Scene.txt
@@ -56,6 +56,7 @@
 よしよし……好きなだけ、触って良いからね……=There, there...You can touch it as much as you'd like...
 よしよし……好きなだけ、触って良いからね……<color%3D#fca4bc>❤<color%3Dwhite>=There, there...You can touch it as much as you'd like...<color%3D#fca4bc>❤<color%3Dwhite>
 
+んっ……やっ……あぅ……=Nn...Yaa...Au...
 
 // Reverse Cowgirl
 　……わ、わかった。=...I-I get it.
